modernized globe visualization

--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
 
     </div>
     
-    <!-- Toggle Button (outside panel) -->
+    <!-- Toggle Button (outside panel1) -->
     <button id="toggle-panel">☰</button>
     
     <!-- Info Panel / Research Data Filters -->
